[gd_scene load_steps=7 format=2]

[ext_resource path="res://car.png" type="Texture" id=1]
[ext_resource path="res://car.gd" type="Script" id=2]
[ext_resource path="res://ShakeCamera2D.gd" type="Script" id=3]
[ext_resource path="res://flash.shader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.336
height = 20.821

[node name="Car" type="KinematicBody2D"]
position = Vector2( 512, 304 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CollisionCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="ShakeCamera2D" type="Camera2D" parent="."]
script = ExtResource( 3 )
max_trauma = 2.0
[connection signal="timeout" from="CollisionCooldownTimer" to="." method="_on_CollisionCooldownTimer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
